[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.0"
regex = "1.10.2"
anyhow = "1.0.75"
thiserror = "1.0.50"
winnow = "0.5.25"
petgraph = "0.6.4"
ndarray = "0.15.6"
